Added CSS grid for phone, background image added, color scheme chosen, added project artwork.

--- a/index.html
+++ b/index.html
@@ -19,35 +19,46 @@
 
   <body class="container">
     <header class="site-header" role="banner" aria-label="site-navigation">
-      <img class="logo" src="./static/img/Reb_Denim2.JPG" alt="Logo">
+      <img class="logo" src="./static/img/Reb_Denim2.jpg" alt="Logo">
       <h1 class="site-name">Rebecca York Hanlon</h1>
       <h3 class="skills">Web Development | Data Analysis</h3>
 
       <!-- hamburger for aside information -->
       <nav class="site-navigation" role="navigation">
+        <div id="menu">&#9776;</div>
       </nav>
 
     </header>
 
     <main class="main-container" role="main">
       <section class="proj-container project-1" role="region">
-         <h3>Project number 1</h3>
+        <img class="img-proj" src="./static/img/projects/cap_stone_djangoStoria-sm.jpg" alt="Example page of interactive storybook">
+        <h3>Storia: An interactive storybook built with Django. With over 16 classes for the database (SQLite) and HTML-templating for the frontend interaction presentation.</h3>
+        <button class="git-button" type="button">To GitHub</button>
       </section>
 
       <section class="proj-container project-2" role="region">
-        <h3>Project number 2</h3>
+        <img class="img-proj" src="./static/img/projects/cap_stone_uxDesign-sm.jpg" alt="Home page of Warehouse U.X. design">
+         <h3>Warehouse: A sample of an UX designed sales website utilizing ...</h3>
+        <button class="git-button" type="button">To GitHub</button>
       </section>
 
       <section class="proj-container blog" role="region">
+        <img class="blog-img" src="static/img/Reb_Denim2.jpg" alt="Logo">
         <h3>Future Blog</h3>
+        <button class="blog-button" type="button">More posts.</button>
       </section>
 
       <section class="proj-container project-3" role="region">
-        <h3>Project number 3</h3>
+        <img class="img-proj" src="./static/img/projects/react_tempStartPage-sm.jpg" alt="Homepage of interactive app to convert kelvin to fahrenheit and celsius">
+         <h3>TEMPCONVERT: an interactive app built in React.  Converts Kelvin to Fahrenheit and Celsius with a sense of humor.</h3>
+        <button class="git-button" type="button">To GitHub</button>
       </section>
 
       <section class="proj-container project-4" role="region">
-        <h3>Project number 4</h3>
+        <img class="img-proj" src="./static/img/projects/cap_stone_reactRavenous-sm.jpg" alt="Homepage of Ravenous App">
+         <h3>Ravenous: An interactive app built in React. Using the Yelp API.</h3>
+        <button class="git-button" type="button">To GitHub</button>
       </section>
 
     </main>
