Used grid css for project sections, styled buttons.

--- a/index.html
+++ b/index.html
@@ -39,39 +39,39 @@
 </header>
 
 <main class="main-container" role="main">
+
 	<section class="proj-container project-1" role="region">
-		<img class="img-proj" src="./static/img/projects/cap_stone_djangoStoria-sm.jpg"
+		<img class="proj-img" src="./static/img/projects/cap_stone_djangoStoria-sm.jpg"
 			 alt="Example page of interactive storybook">
-		<h3>Storia: An interactive storybook built with Django. With over 16 classes for the database (SQLite) and
-			HTML-templating for the frontend interaction presentation.</h3>
-		<button class="git-button" type="button">To GitHub</button>
+		<h2 class="proj-heading">Storia</h2><h3 class="proj-highlight"> An interactive storybook built with Django.</h3><p class="proj-text">Over 16 classes created to build the database (SQLite) and
+			HTML-Templating for the Front-end interactive presentation.</p>
+		<button class="button button git-button" type="button">To GitHub</button>
 	</section>
 
 	<section class="proj-container project-2" role="region">
-		<img class="img-proj" src="./static/img/projects/cap_stone_uxDesign-sm.jpg"
+		<img class="proj-img" src="./static/img/projects/cap_stone_uxDesign-sm.jpg"
 			 alt="Home page of Warehouse U.X. design">
-		<h3>Warehouse: A sample of an UX designed sales website utilizing ...</h3>
-		<button class="git-button" type="button">To GitHub</button>
+		<h2 class="proj-heading">Warehouse</h2><h3 class="proj-highlight">A sample of an UX designed sales website.</h3><p class="proj-text">utilizing ...</p>
+		<button class="button git-button" type="button">To GitHub</button>
 	</section>
 
 	<section class="proj-container blog" role="region">
 		<img class="blog-img" src="static/img/Reb_Denim2.jpg" alt="Logo">
-		<h3>Future Blog</h3>
-		<button class="blog-button" type="button">More posts.</button>
+		<h2 class="proj-heading">Future Blog</h2><h3 class="proj-highlight">Code Challenge: Palindrome</h3><p class="proj-text">Let's start with Python...</p>
+		<button class="button blog-button" type="button">More posts.</button>
 	</section>
 
 	<section class="proj-container project-3" role="region">
-		<img class="img-proj" src="./static/img/projects/react_tempStartPage-sm.jpg"
+		<img class="proj-img" src="./static/img/projects/react_tempStartPage-sm.jpg"
 			 alt="Homepage of interactive app to convert kelvin to fahrenheit and celsius">
-		<h3>TEMPCONVERT: an interactive app built in React. Converts Kelvin to Fahrenheit and Celsius with a sense of
-			humor.</h3>
-		<button class="git-button" type="button">To GitHub</button>
+		<h2 class="proj-heading">TEMP<span class="title-highlight">CON</span>VERT</h2><h3 class="proj-highlight"> interactive app built in React.</h3> <p class="proj-text">Converts Kelvin to Fahrenheit and Celsius with a sense of humor.</p>
+		<button class="button git-button" type="button">To GitHub</button>
 	</section>
 
 	<section class="proj-container project-4" role="region">
-		<img class="img-proj" src="./static/img/projects/cap_stone_reactRavenous-sm.jpg" alt="Homepage of Ravenous App">
-		<h3>Ravenous: An interactive app built in React. Using the Yelp API.</h3>
-		<button class="git-button" type="button">To GitHub</button>
+		<img class="proj-img" src="./static/img/projects/cap_stone_reactRavenous-sm.jpg" alt="Homepage of Ravenous App">
+		<h2 class="proj-heading">Ravenous</h2><h3 class="proj-highlight">An interactive app built in React using the Yelp API.</h3><p class="proj-text">Find the best restaurant in your local area.</p>
+		<button class="button git-button" type="button">To GitHub</button>
 	</section>
 
 </main>
