Styled contents of menu drawer, styled footer.  Further refined responsiveness: blog, projects, drawer/menu.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <header class="site-header" role="banner" aria-label="site-navigation">
 	<img class="logo" src="./static/img/Reb_Denim2.jpg" alt="Logo">
 	<h1 class="site-name">Rebecca York Hanlon</h1>
-	<h3 class="skills">Web Development | Data Analysis</h3>
+	<h3 class="skills">Web Development &nbsp; | &nbsp; Data Analysis</h3>
 
 	<!-- hamburger for project information -->
 	<a id="menu" class="header-menu"><div class="menu-container" onclick="menuClick(this)">
@@ -46,7 +46,7 @@
 	<section class="proj-container project-1" role="region">
 		<img class="proj-img" src="./static/img/projects/cap_stone_djangoStoria-sm.jpg"
 			 alt="Example page of interactive storybook">
-		<h2 class="proj-heading">Storia</h2><h3 class="proj-highlight"> An interactive storybook built with Django.</h3><p class="proj-text">Over 16 classes created to build the database (SQLite) and
+		<h2 class="proj-heading">Storia</h2><h3 class="proj-highlight"> An Interactive Storybook Built with Django</h3><p class="proj-text">Over 16 classes created to build the database (SQLite) and
 			HTML-Templating for the Front-end interactive presentation.</p>
 		<button class="button button git-button" type="button">To GitHub</button>
 	</section>
@@ -54,26 +54,26 @@
 	<section class="proj-container project-2" role="region">
 		<img class="proj-img" src="./static/img/projects/cap_stone_uxDesign-sm.jpg"
 			 alt="Home page of Warehouse U.X. design">
-		<h2 class="proj-heading">Warehouse</h2><h3 class="proj-highlight">A sample of an UX designed sales website.</h3><p class="proj-text">utilizing ...</p>
+		<h2 class="proj-heading">Warehouse</h2><h3 class="proj-highlight">A Sample of a UX-Designed Website</h3><p class="proj-text">utilizing ...</p>
 		<button class="button git-button" type="button">To GitHub</button>
 	</section>
 
 	<section class="blog-container blog" role="region">
 		<img class="blog-img" src="static/img/Reb_Denim2.jpg" alt="Logo">
-		<h2 class="proj-heading">Blog</h2><h3 class="proj-highlight">Code Challenge: Palindrome</h3><p class="proj-text">Let's start with Python...</p>
+		<h2 class="proj-heading">Blog</h2><h3 class="proj-highlight">Code Challenge: Palindrome</h3><p class="proj-text">Let's start with Python...Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eu ullamcorper elit, in fermentum ex. Nulla eros metus, egestas ac metus nec, pharetra suscipit lorem. Integer vel nulla eros. Proin consequat.</p>
 		<button class="button blog-button" type="button">More posts.</button>
 	</section>
 
 	<section class="proj-container project-3" role="region">
 		<img class="proj-img" src="./static/img/projects/react_tempStartPage-sm.jpg"
 			 alt="Homepage of interactive app to convert kelvin to fahrenheit and celsius">
-		<h2 class="proj-heading">TEMP<span class="title-highlight">CON</span>VERT</h2><h3 class="proj-highlight"> interactive app built in React.</h3> <p class="proj-text">Converts Kelvin to Fahrenheit and Celsius with a sense of humor.</p>
+		<h2 class="proj-heading">TEMP<span class="title-highlight">CON</span>VERT</h2><h3 class="proj-highlight">Interactive App Built with React</h3> <p class="proj-text">Converts Kelvin to Fahrenheit and Celsius with a sense of humor.</p>
 		<button class="button git-button" type="button">To GitHub</button>
 	</section>
 
 	<section class="proj-container project-4" role="region">
 		<img class="proj-img" src="./static/img/projects/cap_stone_reactRavenous-sm.jpg" alt="Homepage of Ravenous App">
-		<h2 class="proj-heading">Ravenous</h2><h3 class="proj-highlight">An interactive app built in React using the Yelp API.</h3><p class="proj-text">Find the best restaurant in your local area.</p>
+		<h2 class="proj-heading">Ravenous</h2><h3 class="proj-highlight">An Interactive App Built with React & the Yelp API</h3><p class="proj-text">Find the best restaurant in your local area.</p>
 		<button class="button git-button" type="button">To GitHub</button>
 	</section>
 
