Added media query for iPad Pro.  Added Topics aside, began styling.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<h3 class="skills">Web Development &nbsp; | &nbsp; Data Analysis</h3>
 
 	<!-- hamburger for project information -->
-	<a id="menu" class="header-menu"><div class="menu-container" onclick="menuClick(this)">
+	<a id="menu" class="header-menu proj-list"><div class="menu-container" onclick="menuClick(this)">
 		<div class="bar1"></div>
 		<div class="bar2"></div>
 		<div class="bar3"></div>
@@ -76,6 +76,17 @@
 		<h2 class="proj-heading">Ravenous</h2><h3 class="proj-highlight">An Interactive App Built with React & the Yelp API</h3><p class="proj-text">Find the best restaurant in your local area.</p>
 		<button class="button git-button" type="button">To GitHub</button>
 	</section>
+
+	<aside class="topic-container" role="complementary">
+		<h2 class="topic-instructions">Click to See a Project</h2>
+	<ul class="topics">
+		<li class="topic-item"><a href="#">Django Project: Interactive Storybook</a></li>
+		<li class="topic-item"><a href="#">UX Project: Warehouse Online Sales</a></li>
+		<li class="topic-item"><a href="#">Blog: current post</a></li>
+		<li class="topic-item"><a href="#">React Project: TempConVert</a></li>
+		<li class="topic-item"><a href="#">React Project: Ravenous Food App</a></li>
+	</ul>
+</aside>
 
 </main>
 <footer class="footer" role="contentinfo">
