--- a/index.html
+++ b/index.html
@@ -9,17 +9,27 @@
 	<title>Rebecca York Hanlon</title>
 
 	<!-- Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya:400,400i,700,700i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+
+	<!--<link href="https://fonts.googleapis.com/css?family=Exo+2:400,400i,700,700i" rel="stylesheet">-->
+
+
 
 	<!-- custom CSS-->
 	<!--<link rel="stylesheet" type="text/css" href="./static/normalize.css">-->
 	<link rel="stylesheet" type="text/css" href="static/css/main.css">
 	<link rel="stylesheet" type="text/css" href="static/css/responsive.css">
+
+	<!-- favicon -->
+	<link rel="icon" type="image/jpg" href="./static/img/favicon.ico">
 </head>
 
 <body class="container">
+
 <header class="site-header" role="banner" aria-label="site-navigation">
-	<img class="logo" src="./static/img/Reb_Denim2.jpg" alt="Logo">
+	<img class="logo" src="./static/img/BH_logo_xs.jpg" alt="Logo">
 	<h1 class="site-name">Rebecca York Hanlon</h1>
 	<h3 class="skills">Web Development &nbsp; | &nbsp; Data Analysis</h3>
 
@@ -31,11 +41,11 @@
 	</div></a>
 	<nav id="drawer" class="nav site-navigation" role="navigation">
 		<ul class="nav-list">
-			<li class="nav-item"><a href="#">Django Project: Interactive Storybook</a></li>
-			<li class="nav-item"><a href="#">UX Project: Warehouse Online Sales</a></li>
+			<li class="nav-item"><a href="https://github.com/ryhanlon/Capstone_PDXCodeGuild" target="_blank">Django Project: Interactive Storybook</a></li>
+			<li class="nav-item"><a href="https://github.com/ryhanlon/Website-UIs/tree/master/capstone_wareHouse" target="_blank">UX Project: Warehouse Online Sales</a></li>
 			<li class="nav-item"><a href="#">Blog: current post</a></li>
-			<li class="nav-item"><a href="#">React Project: TempConVert</a></li>
-			<li class="nav-item"><a href="#">React Project: Ravenous Food App</a></li>
+			<li class="nav-item"><a href="https://github.com/ryhanlon/JavaScript-CodeAcademy/tree/master/tempconverter" target="_blank">React Project: TempConVert</a></li>
+			<li class="nav-item"><a href="https://github.com/ryhanlon/JavaScript-CodeAcademy/tree/master/proRavenous-1/ravenous_1" target="_blank">React Project: Ravenous Food App</a></li>
 		</ul>
 	</nav>
 
@@ -46,52 +56,59 @@
 	<section class="proj-container project-1" role="region">
 		<img class="proj-img" src="./static/img/projects/cap_stone_djangoStoria-sm.jpg"
 			 alt="Example page of interactive storybook">
-		<h2 class="proj-heading">Storia</h2><h3 class="proj-highlight"> An Interactive Storybook Built with Django</h3><p class="proj-text">Over 16 classes created to build the database (SQLite) and
+		<h2 class="proj-heading">Storia</h2><h3 class="proj-highlight"> An Interactive Storybook <br> Built with Django</h3><p class="proj-text">Over 16 classes created to build the database (SQLite) and
 			HTML-Templating for the Front-end interactive presentation.</p>
-		<button class="button button git-button" type="button">To GitHub</button>
+		<button class="button button git-button" type="button"><a href="https://github.com/ryhanlon/Capstone_PDXCodeGuild" target="_blank">GitHub</a></button>
 	</section>
 
 	<section class="proj-container project-2" role="region">
 		<img class="proj-img" src="./static/img/projects/cap_stone_uxDesign-sm.jpg"
 			 alt="Home page of Warehouse U.X. design">
 		<h2 class="proj-heading">Warehouse</h2><h3 class="proj-highlight">A Sample of a UX-Designed Website</h3><p class="proj-text">utilizing ...</p>
-		<button class="button git-button" type="button">To GitHub</button>
-	</section>
-
-	<section class="blog-container blog" role="region">
-		<img class="blog-img" src="static/img/Reb_Denim2.jpg" alt="Logo">
-		<h2 class="proj-heading">Blog</h2><h3 class="proj-highlight">Code Challenge: Palindrome</h3><p class="proj-text">Let's start with Python...Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eu ullamcorper elit, in fermentum ex. Nulla eros metus, egestas ac metus nec, pharetra suscipit lorem. Integer vel nulla eros. Proin consequat.</p>
-		<button class="button blog-button" type="button">More posts.</button>
+		<button class="button git-button" type="button"><a href="https://github.com/ryhanlon/Website-UIs/tree/master/capstone_wareHouse" target="_blank">GitHub</a> </button>
 	</section>
 
 	<section class="proj-container project-3" role="region">
 		<img class="proj-img" src="./static/img/projects/react_tempStartPage-sm.jpg"
 			 alt="Homepage of interactive app to convert kelvin to fahrenheit and celsius">
 		<h2 class="proj-heading">TEMP<span class="title-highlight">CON</span>VERT</h2><h3 class="proj-highlight">Interactive App Built with React</h3> <p class="proj-text">Converts Kelvin to Fahrenheit and Celsius with a sense of humor.</p>
-		<button class="button git-button" type="button">To GitHub</button>
+		<button class="button git-button" type="button"><a href="https://github.com/ryhanlon/JavaScript-CodeAcademy/tree/master/tempconverter" target="_blank">GitHub</a></button>
 	</section>
 
 	<section class="proj-container project-4" role="region">
 		<img class="proj-img" src="./static/img/projects/cap_stone_reactRavenous-sm.jpg" alt="Homepage of Ravenous App">
 		<h2 class="proj-heading">Ravenous</h2><h3 class="proj-highlight">An Interactive App Built with React & the Yelp API</h3><p class="proj-text">Find the best restaurant in your local area.</p>
-		<button class="button git-button" type="button">To GitHub</button>
+		<button class="button git-button" type="button"><a href="https://github.com/ryhanlon/JavaScript-CodeAcademy/tree/master/proRavenous-1/ravenous_1"	target="_blank">GitHub</a></button>
 	</section>
 
+	<!-- Blog content and links -->
+	<section class="blog-container blog" role="region">
+		<img class="blog-img" src="static/img/Reb_Denim2_sm.jpg" alt="Logo">
+		<h2 class="blog-heading">Blog</h2>
+		<h3 class="blog-highlight">Code Challenge: Palindrome</h3>
+		<p class="blog-text">Let's start with Python...Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+			eu ullamcorper elit, in fermentum ex. Nulla eros metus, egestas ac metus nec, pharetra suscipit lorem.
+			Integer vel nulla eros. Proin consequat.</p>
+		<button class="button blog-button" type="button">More Posts</button>
+	</section>
+
+	<!-- Content and links for the aside, iPad Pro and wider screens -->
 	<aside class="topic-container" role="complementary">
-		<h2 class="topic-instructions">Click to See a Project</h2>
-	<ul class="topics">
-		<li class="topic-item"><a href="#">Django Project: Interactive Storybook</a></li>
-		<li class="topic-item"><a href="#">UX Project: Warehouse Online Sales</a></li>
-		<li class="topic-item"><a href="#">Blog: current post</a></li>
-		<li class="topic-item"><a href="#">React Project: TempConVert</a></li>
-		<li class="topic-item"><a href="#">React Project: Ravenous Food App</a></li>
-	</ul>
-</aside>
+		<h2 class="topic-instructions">Click to See a Project a GitHub</h2>
+		<ul class="topics">
+			<li class="topic-item"><a href="https://github.com/ryhanlon/Capstone_PDXCodeGuild" target="_blank">Django Project: Interactive Storybook</a></li>
+			<li class="topic-item"><a href="https://github.com/ryhanlon/Website-UIs/tree/master/capstone_wareHouse" target="_blank">UX Project: Warehouse Online Sales</a></li>
+			<li class="topic-item"><a href="#">Blog: current post</a></li>
+			<li class="topic-item"><a href="https://github.com/ryhanlon/JavaScript-CodeAcademy/tree/master/tempconverter" target="_blank">React Project: TempConVert</a></li>
+			<li class="topic-item"><a href="https://github.com/ryhanlon/JavaScript-CodeAcademy/tree/master/proRavenous-1/ravenous_1" target="_blank">React Project: Ravenous Food App</a></li>
+		</ul>
+	</aside>
 
 </main>
+
 <footer class="footer" role="contentinfo">
 	<p class="footer-info">
-		copyright &copy; RYHanlon 2018
+		COPYRIGHT &copy; RYHanlon 2018
 	</p>
 </footer>
 
