--- a/index.html
+++ b/index.html
@@ -54,30 +54,36 @@
 <main class="main-container" role="main">
 
 	<section class="proj-container project-1" role="region">
-		<img class="proj-img" src="./static/img/projects/cap_stone_djangoStoria-sm.jpg"
+		<img class="proj-img" src="./static/img/projects/cap_stone_djangoStoria-500px.jpg"
 			 alt="Example page of interactive storybook">
-		<h2 class="proj-heading">Storia</h2><h3 class="proj-highlight"> An Interactive Storybook <br> Built with Django</h3><p class="proj-text">Over 16 classes created to build the database (SQLite) and
-			HTML-Templating for the Front-end interactive presentation.</p>
+		<h2 class="proj-heading">Storia</h2><h3 class="proj-highlight"> An Interactive Storybook <br> Built with Django</h3><p class="proj-text">Web App for children to learn how to read with interactive storybooks.  It turns plain stories into interactive stories with an analyses of the child's progress.  Over 16 classes created to build the database (SQLite) and
+			HTML-Templating for the Front-end interactive presentation. Uses a REST Framework to capture user actions and store in the databse.</p>
 		<button class="button button git-button" type="button"><a href="https://github.com/ryhanlon/Capstone_PDXCodeGuild" target="_blank">GitHub</a></button>
 	</section>
 
 	<section class="proj-container project-2" role="region">
-		<img class="proj-img" src="./static/img/projects/cap_stone_uxDesign-sm.jpg"
+		<img class="proj-img" src="./static/img/projects/cap_stone_uxDesign-500px.jpg"
 			 alt="Home page of Warehouse U.X. design">
-		<h2 class="proj-heading">Warehouse</h2><h3 class="proj-highlight">A Sample of a UX-Designed Website</h3><p class="proj-text">utilizing ...</p>
-		<button class="button git-button" type="button"><a href="https://github.com/ryhanlon/Website-UIs/tree/master/capstone_wareHouse" target="_blank">GitHub</a> </button>
+		<h2 class="proj-heading">Warehouse</h2><h3 class="proj-highlight">A Sample of a <br>UX-Designed Website</h3><p class="proj-text">Used Reviewed User Story Templates to devolop a plan to update the website.  Responsiveness was add by using Media Queries, Semantic HTML, CSS Grid and Flexbox. For a better Screen Reader experience, added alt tags for images, aria-role attributes, aria-labels and aria-labelled-by. </p>
+		<button class="button button git-button" type="button"><a href="https://github.com/ryhanlon/Capstone_PDXCodeGuild" target="_blank">GitHub</a></button>
 	</section>
 
 	<section class="proj-container project-3" role="region">
-		<img class="proj-img" src="./static/img/projects/react_tempStartPage-sm.jpg"
+		<img class="proj-img" src="./static/img/projects/react_tempStartPage-500px.jpg"
 			 alt="Homepage of interactive app to convert kelvin to fahrenheit and celsius">
-		<h2 class="proj-heading">TEMP<span class="title-highlight">CON</span>VERT</h2><h3 class="proj-highlight">Interactive App Built with React</h3> <p class="proj-text">Converts Kelvin to Fahrenheit and Celsius with a sense of humor.</p>
-		<button class="button git-button" type="button"><a href="https://github.com/ryhanlon/JavaScript-CodeAcademy/tree/master/tempconverter" target="_blank">GitHub</a></button>
+		<h2 class="proj-heading">TEMP<span class="title-highlight">CON</span>VERT</h2><h3 class="proj-highlight">Interactive App Built with React</h3> <p class="proj-text">TempConVert is a web app that allows the user to convert Kelvin to Celsius and Fahrenheit. This web app accepts input (K) and then posts a response based on the conversion to fahrenheit and celsius. The goal of this project was to transform this terminal based app into a web app using React.</p>
+		<button class="button button git-button" type="button"><a href="https://github.com/ryhanlon/Capstone_PDXCodeGuild" target="_blank">GitHub</a></button>
 	</section>
 
 	<section class="proj-container project-4" role="region">
-		<img class="proj-img" src="./static/img/projects/cap_stone_reactRavenous-sm.jpg" alt="Homepage of Ravenous App">
-		<h2 class="proj-heading">Ravenous</h2><h3 class="proj-highlight">An Interactive App Built with React & the Yelp API</h3><p class="proj-text">Find the best restaurant in your local area.</p>
+		<img class="proj-img" src="./static/img/projects/cap_stone_reactRavenous-500px.jpg" alt="Homepage of Ravenous App">
+		<h2 class="proj-heading">Ravenous</h2><h3 class="proj-highlight">An Interactive App Built with React & the Yelp API</h3><p class="proj-text">An interactive app using the Yelp API to find places to eat.  User can input type of food and location for the search criteria then sort by Best Match, Highest Rated and Most Reviewed. Built using Stateful and Stateless components, passing props, mapping data and then rendering. <code class="code-highlight">Fetch()</code> for the API calls. </p>
+		<button class="button git-button" type="button"><a href="https://github.com/ryhanlon/JavaScript-CodeAcademy/tree/master/proRavenous-1/ravenous_1"	target="_blank">GitHub</a></button>
+	</section>
+
+	<section class="proj-container project-5" role="region">
+		<img class="proj-img" src="./static/img/projects/da_gun_deaths-500px.jpg" alt="Summary of Gun Deaths in America">
+		<h2 class="proj-heading">Gun Deaths in the U.S.</h2><h3 class="proj-highlight">Exploration Data Using Python</h3><p class="proj-text">This project was done in Jupyter Notebook using a dataset from FiveThirtyEight (2012 to 2014) and data from the Census.  Used CSV and Datetime modules help sort the data. Explored the data by gender, by race, and amounts per month and year. </p>
 		<button class="button git-button" type="button"><a href="https://github.com/ryhanlon/JavaScript-CodeAcademy/tree/master/proRavenous-1/ravenous_1"	target="_blank">GitHub</a></button>
 	</section>
 
@@ -85,20 +91,18 @@
 	<section class="blog-container blog" role="region">
 		<img class="blog-img" src="static/img/Reb_Denim2_sm.jpg" alt="Logo">
 		<h2 class="blog-heading">Blog</h2>
-		<h3 class="blog-highlight">Code Challenge: Palindrome</h3>
-		<p class="blog-text">Let's start with Python...Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-			eu ullamcorper elit, in fermentum ex. Nulla eros metus, egestas ac metus nec, pharetra suscipit lorem.
-			Integer vel nulla eros. Proin consequat.</p>
+		<h3 class="blog-highlight">Code Challenge: Factorialize a Number</h3>
+		<p class="blog-text">Used a for loop with the range function <code class="code-highlight">range(start, stop[,step])</code> to generate a range of numbers, starting with 1 and ending with the argument + 1. The second parameter in range() is exclusionary, so <code class="code-highlight">num + 1</code> is used to include the argument. Then multiplied each number to the next number.</p>
 		<button class="button blog-button" type="button">More Posts</button>
 	</section>
 
 	<!-- Content and links for the aside, iPad Pro and wider screens -->
 	<aside class="topic-container" role="complementary">
-		<h2 class="topic-instructions">Click to See a Project a GitHub</h2>
+		<h2 class="topic-instructions">View Project on GitHub</h2>
 		<ul class="topics">
 			<li class="topic-item"><a href="https://github.com/ryhanlon/Capstone_PDXCodeGuild" target="_blank">Django Project: Interactive Storybook</a></li>
 			<li class="topic-item"><a href="https://github.com/ryhanlon/Website-UIs/tree/master/capstone_wareHouse" target="_blank">UX Project: Warehouse Online Sales</a></li>
-			<li class="topic-item"><a href="#">Blog: current post</a></li>
+			<li class="topic-item"><a href="#">Blog: Current Post</a></li>
 			<li class="topic-item"><a href="https://github.com/ryhanlon/JavaScript-CodeAcademy/tree/master/tempconverter" target="_blank">React Project: TempConVert</a></li>
 			<li class="topic-item"><a href="https://github.com/ryhanlon/JavaScript-CodeAcademy/tree/master/proRavenous-1/ravenous_1" target="_blank">React Project: Ravenous Food App</a></li>
 		</ul>
